oidc-auth/overlays/keycloak/cloud/oauth2-proxy-signout-virtual-service-cloud_back.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
  labels:
    app: oauth2-proxy
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - kubeflow.kubefrog.ai
  http:
  - match:
    - uri:
        prefix: /authservice/logout
    rewrite:
      uri: /oauth2/sign_out
    route:
    - destination:
        host: oauth2-proxy-cloud.auth.svc.cluster.local
        port:
          number: 4180
    corsPolicy:
      allowOrigins:
      - exact: https://kubeflow.kubefrog.ai https://kubefrog-web.kubefrog.fr
  
      allowMethods:
      - POST
      allowHeaders:
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      - X-Auth-Request-Redirect
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-User-Groups
      allowCredentials: true
      maxAge: "24h"

    headers:
      request:
        set:
          X-Auth-Request-Redirect: https://auth.kubefrog.fr/realms/kubeflow/protocol/openid-connect/logout?redirect_uri=https://kubeflow.kubefrog.ai
      response:
        set:
          Content-Security-Policy: "frame-ancestors https://kubefrog-web.kubefrog.fr http://192.168.0.47:31664"
        remove:
          - X-Frame-Options   

# X-Auth-Request-Redirect: https://auth.82.66.198.32.nip.io/realms/kubeflow/protocol/openid-connect/logout?post_logout_redirect_uri=https%%3A%%2F%%2Fkubeflow.82.66.198.32.nip.io
